--- a/main.html
+++ b/main.html
@@ -12,13 +12,14 @@
      </style>
   </head>
   <body>
-    <table style="width: 100%; height: 100%">
+<!--     <table style="width: 100%; height: 100%"> -->
       <!-- Your code here -->
-		<table style="width:100%">
+		<table style="width: 100%; height: 100%">
+<!-- 			first row -->
 			<tr>
-				<td><table style="width:100%">
-					<tr>
-						<th>Nested Table 2</th>
+				<td><table>
+					<tr >
+						<th colspan="2">Nested Table 2</th>
 					</tr>
 					<tr>
 						<th>Column 1</th>
@@ -30,28 +31,29 @@
 					</tr>
 				</table></td>
             <td>
-			  <table style="width:100%">
+			  <table>
 				  <tr>
 					  <th>Nested Table 1</th>
 				  </tr>
 				  <tr>
+					  <td>
 					  <ul>
 						  <li>List item</li>
 						  <li>List item</li>
 						  <li>List item</li>
-					  </ul>
+					  </ul></td>
 				  </tr>
 			  </table>
 		  </td>
 			</tr>
 
 
-			
+<!-- 			second row -->
 			<tr>
 				<td>
-					<table style="width:100%">
+					<table>
 						<tr>
-							<th>Nested Table 3</th>
+							<th colspan="2">Nested Table 3</th>
 						</tr>
 						<tr>
 							<td>Nested Table</td>
@@ -61,7 +63,7 @@
 				</td>
 
 				<td>
-					<table style="width:100%">
+					<table>
 						<tr>
 							<th>Nested Table 4</th>
 						</tr>
@@ -71,6 +73,7 @@
 					</table>
 				</td>
 			</tr>
-    </table>
+			
+       </table>
   </body>
 </html>
