--- a/main.html
+++ b/main.html
@@ -17,27 +17,27 @@
 		<table style="width: 100%; height: 100%">
 <!-- 			first row -->
 			<tr>
-				<td><table>
-					<tr >
+				<td><table style="width:100%">
+					<tr>
 						<th colspan="2">Nested Table 2</th>
 					</tr>
 					<tr>
 						<th>Column 1</th>
 						<th>Coumn 2</th>
 					</tr>
-					<tr>
+					<tr style="text-align: center;">
 						<td>abc</td>
 						<td>def</td>
 					</tr>
 				</table></td>
-            <td>
-			  <table>
+            <td style="padding:30px 0px">
+			  <table style="width:100%">
 				  <tr>
 					  <th>Nested Table 1</th>
 				  </tr>
 				  <tr>
 					  <td>
-					  <ul>
+					  <ul style="text-align: center;">
 						  <li>List item</li>
 						  <li>List item</li>
 						  <li>List item</li>
@@ -50,25 +50,25 @@
 
 <!-- 			second row -->
 			<tr>
-				<td>
-					<table>
+				<td style="padding:30px 0px">
+					<table  style="width:100%">
 						<tr>
 							<th colspan="2">Nested Table 3</th>
 						</tr>
-						<tr>
-							<td>Nested Table</td>
+						<tr style="text-align: center;">
+							<td><a href="#">Nested Table</a></td>
 							<td>Dem Countinue</td>
 						</tr>
 					</table>
 				</td>
 
-				<td>
-					<table>
+				<td style="padding:30px 0px">
+					<table  style="width:100%">
 						<tr>
 							<th>Nested Table 4</th>
 						</tr>
-						<tr>
-							<td>HTML</td>
+						<tr style="text-align: center; background-color:black">
+							<td style="color:white">HTML</td>
 						</tr>
 					</table>
 				</td>
