--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
 					</tr>
 					<tr>
 						<th>Column 1</th>
-						<th>Coumn 2</th>
+						<th>Column 2</th>
 					</tr>
 					<tr style="text-align: center;">
 						<td>abc</td>
@@ -38,9 +38,9 @@
 				  <tr>
 					  <td>
 					  <ul style="text-align: center;">
-						  <li>List item</li>
-						  <li>List item</li>
-						  <li>List item</li>
+						  <li>List item 1</li>
+						  <li>List item 1</li>
+						  <li>List item 1</li>
 					  </ul></td>
 				  </tr>
 			  </table>
@@ -67,8 +67,8 @@
 						<tr>
 							<th>Nested Table 4</th>
 						</tr>
-						<tr style="text-align: center; background-color:black">
-							<td style="color:white">HTML</td>
+						<tr style="text-align: center;">
+							<td style="background-color:rgb(0, 0, 0); color:white">HTML</td>
 						</tr>
 					</table>
 				</td>
